--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ src="https://www.facebook.com/tr?id=1532975915503226&ev=PageView&noscript=1"
     <span>Free to Join</span>
   </div>
 
-  <a href="https://t.me/+zJ1IbZnTGos3MTE1" class="telegram-btn">
+  <a href="https://t.me/+ugtunjwUKVU2OWU1" class="telegram-btn">
     🚀 Join on Telegram
   </a>
 
